@@ -102,6 +102,52 @@
             1.9         -0.741         -0.741
             2.1          0.861          0.861
 
+  MEIC Test: "Test Molecule" Harmonic oscillators + rotors.
+  ---------------------------------------------------------
+
+    Energy/cm-1                 SoS Cell                SoS Grain
+  ---------------------------------------------------------------
+              0          0.2721655269759           8.135309041508
+            100           271.1691542327            266.005281918
+            200           1063.743458115           1052.403307791
+            300           2654.875090786           2631.556445596
+            400           5951.041577886           5906.398887861
+            500           11766.03085067           11693.64348076
+            600            21185.9323136           21068.63714055
+            700           36231.48798257           36045.96919393
+            800           59101.10437413           58825.66466111
+            900           92532.36174236           92132.58860005
+           1000           140794.9462959           140222.4076095
+           2000           3637152.337387           3627388.000232
+           3000           38645249.69138           38564283.08055
+           4000           261003043.9772           260546906.0051
+           5000           1326173810.902           1324165028.846
+           6000            5525946820.66           5518509881.464
+           7000           19858822778.41           19834668608.37
+           8000           63567021469.86           63496274153.17
+           9000           185275904676.5           185085423387.8
+          10000           499590772148.6           499112745071.2
+          11000            1261197982332            1260068028175
+          12000            3008234873060            3005698500148
+          13000            6828946225847            6823504680916
+          14000      1.484074393355e+013      1.482952710492e+013
+          15000      3.102481072038e+013      3.100249870695e+013
+          16000        6.2640740528e+013      6.259775698728e+013
+          17000      1.225657980149e+014       1.22485354234e+014
+          18000      2.330775320233e+014      2.329308932111e+014
+          19000      4.318469794909e+014      4.315860309422e+014
+          20000      7.812590453525e+014      7.808048257171e+014
+          21000      1.382661153869e+015      1.381886456999e+015
+          22000      2.397804896935e+015      2.396508273265e+015
+          23000      4.080643880705e+015      4.078511331324e+015
+          24000      6.823854445815e+015      6.820403719003e+015
+          25000      1.122604198932e+016      1.122054256308e+016
+          26000      1.818769265965e+016      1.817905210435e+016
+          27000      2.904666166561e+016      2.903326598086e+016
+          28000      4.576751847555e+016       4.57470100054e+016
+          29000      7.120359384538e+016      7.117256527804e+016
+          30000      1.094563332288e+017      1.094099097191e+017
+
   MEIC Test: "Test Molecule" Harmonic oscillators only.
   -----------------------------------------------------
 
@@ -147,6 +193,52 @@
           28000            1242369663927            1241865646801
           29000            1853719478089            1852987972381
           30000            2736275451823            2735224317606
+
+  MEIC Test: "AcO2 Harmonic" Harmonic oscillators + rotors.
+  ---------------------------------------------------------
+
+    Energy/cm-1                 SoS Cell                SoS Grain
+  ---------------------------------------------------------------
+              0                       25                      559
+            100                    18320                    17900
+            200                    63843                    63057
+            300                   161430                   160188
+            400                   348794                   346770
+            500                   653000                   648896
+            600                  1172157                  1165939
+            700                  1994426                  1984781
+            800                  3265975                  3250203
+            900                  5164605                  5144569
+           1000                  7920154                  7885154
+           2000                235974967                235284453
+           3000               2991222951               2984473345
+           4000              24206604157              24159671372
+           5000             146574444298             146327300094
+           6000             721461347321             720372217042
+           7000            3034257318501            3030101166526
+           8000      1.126626974502e+013      1.125210083179e+013
+           9000      3.778440960321e+013      3.774040080802e+013
+          10000      1.163833306001e+014      1.162568630623e+014
+          11000      3.334232118016e+014      3.330833270401e+014
+          12000      8.972090708357e+014      8.963468746237e+014
+          13000      2.285507484776e+015      2.283428705094e+015
+          14000      5.546533347388e+015      5.541741807706e+015
+          15000       1.28910106248e+016       1.28804014788e+016
+          16000      2.881925193025e+016      2.879659667208e+016
+          17000      6.220433200476e+016      6.215751287498e+016
+          18000      1.300406834463e+017      1.299467735447e+017
+          19000       2.64027010134e+017      2.638437224907e+017
+          20000      5.218710627995e+017      5.215222087321e+017
+          21000      1.006308405487e+018      1.005659644335e+018
+          22000      1.896497557137e+018      1.895316699635e+018
+          23000      3.498942544047e+018      3.496835653644e+018
+          24000      6.328750457445e+018      6.325060624457e+018
+          25000      1.123733597393e+019      1.123098528946e+019
+          26000      1.961028692813e+019      1.959953318808e+019
+          27000      3.366987904964e+019      3.365194597891e+019
+          28000      5.693183650169e+019      5.690235856365e+019
+          29000      9.488691316791e+019      9.483911146336e+019
+          30000      1.560067271794e+020      1.559301993664e+020
 
   MEIC Test: "AcO2 Harmonic" Harmonic oscillators only.
   -----------------------------------------------------
@@ -194,6 +286,52 @@
           29000       4.36959110262e+013      4.367565906716e+013
           30000      6.903279303341e+013      6.900163402632e+013
 
+  MEIC Test: "AcO2 Anharmonic" Anharmonic oscillators + rotors.
+  -------------------------------------------------------------
+
+    Energy/cm-1                 SoS Cell                SoS Grain
+  ---------------------------------------------------------------
+              0                       25                      559
+            100                    18320                    17900
+            200                    63843                    63057
+            300                   161430                   160188
+            400                   349154                   346903
+            500                   653452                   649448
+            600                  1174443                  1167814
+            700                  1998738                  1989246
+            800                  3274235                  3258820
+            900                  5181048                  5160367
+           1000                  7948222                  7914559
+           2000                238161385                237491991
+           3000               3035372556               3028490720
+           4000              24692422073              24644914189
+           5000             150292427173             150038567999
+           6000             743616820179             742492286942
+           7000            3143693100670            3139374642569
+           8000      1.173323375621e+013      1.171842208062e+013
+           9000      3.955434012441e+013      3.950807685045e+013
+          10000      1.224650062606e+014      1.223313297344e+014
+          11000      3.526566694185e+014      3.522953977667e+014
+          12000      9.538533836137e+014      9.529319601117e+014
+          13000      2.442303607076e+015      2.440069832088e+015
+          14000      5.957528133766e+015      5.952351401127e+015
+          15000      1.391740176287e+016      1.390587717787e+016
+          16000      3.127380743555e+016      3.124906324168e+016
+          17000      6.784945550651e+016      6.779804127959e+016
+          18000      1.425719728399e+017       1.42468283632e+017
+          19000      2.909608114382e+017      2.907573356182e+017
+          20000       5.78073590561e+017      5.776841987011e+017
+          21000      1.120437795917e+018      1.119709693159e+018
+          22000      2.122506413068e+018      2.121173893569e+018
+          23000      3.936200948338e+018      3.933810439307e+018
+          24000       7.15658904184e+018      7.152379534084e+018
+          25000       1.27733054765e+019      1.276602053504e+019
+          26000      2.240681270752e+019      2.239440902527e+019
+          27000      3.867216214127e+019      3.865136344539e+019
+          28000      6.573210967077e+019      6.569773218689e+019
+          29000      1.101283251897e+020      1.100722693341e+020
+          30000      1.820167531271e+020      1.819265123016e+020
+
   MEIC Test: "AcO2 Anharmonic" Anharmonic oscillators only.
   ---------------------------------------------------------
 
@@ -208,36 +346,82 @@
             600                       18                       18
             700                       29                       29
             800                       42                       42
-            900                       62                       62
-           1000                       86                       86
-           2000                     1467                     1464
-           3000                    13454                    13429
-           4000                    85710                    85561
-           5000                   429009                   428373
-           6000                  1802757                  1800254
-           7000                  6617516                  6609390
-           8000                 21805828                 21780842
-           9000                 65736345                 65666340
-          10000                183869909                183687269
-          11000                482358620                481907566
-          12000               1196857743               1195801272
-          13000               2827937202               2825570716
-          14000               6398084934               6392988083
-          15000              13924327455              13913753108
-          16000              29262785277              29241539001
-          17000              59579294153              59537831084
-          18000             117851046985             117772294274
-          19000             227031742813             226885779155
-          20000             426851062573             426586563155
-          21000             784716292435             784246992975
-          22000            1412900564067            1412083895143
-          23000            2495224801997            2493829048147
-          24000            4327885857218            4325540359671
-          25000            7381093289953            7377213411707
-          26000      1.239095643696e+013      1.238463259685e+013
-          27000      2.049486360904e+013      2.048469876616e+013
-          28000      3.342873600286e+013      3.341260923164e+013
-          29000      5.381145515733e+013      5.378618369854e+013
-          30000      8.555097698647e+013      8.551183491118e+013
+            900                       61                       61
+           1000                       85                       85
+           2000                     1454                     1453
+           3000                    13319                    13288
+           4000                    84611                    84479
+           5000                   422625                   421956
+           6000                  1771868                  1769483
+           7000                  6490795                  6482817
+           8000                 21347346                 21323075
+           9000                 64238126                 64170426
+          10000                179383715                179205724
+          11000                469857100                469418848
+          12000               1164144473               1163118410
+          13000               2746886986               2744593328
+          14000               6206738800               6201809205
+          15000              13491596308              13481366795
+          16000              28321035808              28300504218
+          17000              57599738501              57559715561
+          18000             113819075564             113743117959
+          19000             219052000923             218911372777
+          20000             411468920779             411214312855
+          21000             755775223125             755323886499
+          22000            1359654924109            1358870121646
+          23000            2399277113192            2397936908862
+          24000            4158296597138            4156046108512
+          25000            7086691123810            7082971087503
+          26000      1.188841663047e+013      1.188235754036e+013
+          27000      1.965046923456e+013      1.964073605807e+013
+          28000      3.203082038195e+013      3.201538839391e+013
+          29000      5.152925044854e+013      5.150508210481e+013
+          30000      8.187383164933e+013      8.183641973431e+013
+
+  MEIC Test: "AcO2 Anharmonic" Rotors only.
+  -----------------------------------------
+
+    Energy/cm-1                 SoS Cell                SoS Grain
+  ---------------------------------------------------------------
+              0                       25                      559
+            100                    18320                    17900
+            200                    51425                    51121
+            300                    94870                    94206
+            400                   145227                   144895
+            500                   202750                   202072
+            600                   265773                   265773
+            700                   336325                   335777
+            800                   411134                   410368
+            900                   489629                   488985
+           1000                   574231                   572967
+           2000                  1619775                  1618537
+           3000                  2977541                  2974903
+           4000                  4577992                  4577992
+           5000                  6399261                  6397539
+           6000                  8412585                  8411859
+           7000                 10599736                 10599090
+           8000                 12949670                 12947480
+           9000                 15456173                 15451051
+          10000                 18101375                 18099259
+          11000                 20881357                 20874755
+          12000                 23782647                 23780375
+          13000                 26827896                 26827896
+          14000                 29978666                 29976262
+          15000                 33251739                 33244259
+          16000                 36639302                 36634202
+          17000                 40123671                 40118859
+          18000                 43713855                 43711079
+          19000                 47399651                 47396635
+          20000                 51190121                 51190121
+          21000                 55082787                 55081609
+          22000                 59062432                 59058386
+          23000                 63133775                 63128893
+          24000                 67295150                 67293536
+          25000                 71544197                 71534781
+          26000                 75884238                 75879044
+          27000                 80300818                 80300818
+          28000                 84797192                 84793844
+          29000                 89376717                 89373461
+          30000                 94038209                 94031365
 
   All tests pass.
