@@ -1,5 +1,9 @@
 2012-October-21 Struan Robertson
 
+	* UnitTest.cpp/.xml: Further addition of MEIC tests.
+
+2012-October-21 Struan Robertson
+
 	* UnitTest.cpp/.xml: Addition of more MEIC tests.
 
 2012-July-29 Struan Robertson
